--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta04'
+    implementation 'androidx.browser:browser:1.3.0'
+    implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
 }
 
 
